--- a/app/src/main/res/layout/overlay_block_screen.xml
+++ b/app/src/main/res/layout/overlay_block_screen.xml
@@ -12,4 +12,14 @@
         android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/confirm_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="확인"
+        android:textColor="#FFFFFF"
+        android:background="#2196F3"
+        android:padding="12dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"/>
 </FrameLayout>
