--- a/app/src/main/res/layout/overlay_block_screen.xml
+++ b/app/src/main/res/layout/overlay_block_screen.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:layout_gravity="center"
-        android:text="집중 시간입니다!"
+        android:text="시간이 끝났습니다."
         android:textSize="26sp"
         android:textStyle="bold"
         android:textColor="#000000"
